<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/welcome_to_the_education_app"
        android:textSize="24sp" />

    <Button
        android:id="@+id/mathButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeMessage"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/subject_1" />

    <Button
        android:id="@+id/scienceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mathButton"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/subject_2" />

    <Button
        android:id="@+id/readingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scienceButton"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/subject_3" />

</RelativeLayout>
