<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="90dp"
        android:gravity="center">

        <TextView
            android:id="@+id/userStatsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/user_statistics"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_score"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/totalScoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_score_value"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_response_time"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/averageResponseTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_response_time_value"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="16dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top_scores"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:padding="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:id="@+id/topScoresLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Add TextViews dynamically for top scores -->

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/previous_5_scores"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:padding="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:id="@+id/previousScoresLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Add TextViews dynamically for previous scores -->

        </LinearLayout>

        <Button
            android:id="@+id/shareButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:text="@string/share" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/transparent" />
    </LinearLayout>

</ScrollView>
