<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mindboost.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/landing_page" />

    <fragment
        android:id="@+id/navigation_Settings"
        android:name="com.example.mindboost.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/settings_screen" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.mindboost.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/statistics_screen" />
    <fragment
        android:id="@+id/navigation_notifications2"
        android:name="com.example.mindboost.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/statistics_screen" />
</navigation>