<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_title"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:padding="16dp" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_score"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:padding="16dp"
        android:layout_below="@id/titleTextView" />

    <TextView
        android:id="@+id/scoreValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="83dp"
        android:layout_marginTop="0dp"
        android:padding="16dp"
        android:text="@string/current_score_value"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/quitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:text="@string/quit"
        android:textColor="#E1BEE7"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/scoreTextView"
        android:layout_above="@id/quitButton">

        <LinearLayout
            android:id="@+id/questionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"/>

    </ScrollView>

</RelativeLayout>
